--- a/libs/search-widget/src/common/common-style.scss
+++ b/libs/search-widget/src/common/common-style.scss
@@ -131,6 +131,7 @@
 
   // Viewer
   --expander-header-height: var(--rhythm-5);
+  --player-bar-height: var(--rhythm-5);
 
   // Customizable theme
   --border-color: var(--custom-border-color, var(--color-dark-stronger));
