--- a/libs/search-widget/src/components/viewer/renderers/players/YoutubePlayer.scss
+++ b/libs/search-widget/src/components/viewer/renderers/players/YoutubePlayer.scss
@@ -11,7 +11,7 @@
     height: 100%;
 
     .player {
-      max-height: 100%;
+      max-height: calc(100vh - var(--renderer-outer-space));
     }
   }
 }
