--- a/libs/search-widget/src/components/result-row/ResultRow.scss
+++ b/libs/search-widget/src/components/result-row/ResultRow.scss
@@ -55,6 +55,10 @@
 
     .result-container {
       width: calc(100% - var(--width-thumbnail) - var(--rhythm-2));
+
+      h3 {
+        cursor: pointer;
+      }
     }
   }
 }
