Fix transcript section
  - display position indicator in transcript section
  - add transcript selection management (highlight + playFrom)
  - fix metadata sections transitions

--- a/libs/search-widget/src/components/viewer/MetadataContainer.scss
+++ b/libs/search-widget/src/components/viewer/MetadataContainer.scss
@@ -46,13 +46,14 @@
       opacity: 0;
       max-height: calc(100vh - var(--expander-max-height));
       overflow: auto;
-      transition: height var(--transition-fast), opacity var(--transition-superfast);
+      transition: height var(--transition-moderate), opacity var(--transition-fast) var(--duration--moderate);
     }
 
     &.expanded {
       .metadata-expander-content {
         height: var(--content-height);
         opacity: 1;
+        transition: height var(--transition-moderate), opacity var(--transition-fast);
       }
     }
   }
