[sc-6298] Support conditional fields in knowledge box configuration form

--- a/apps/dashboard/src/app/account/account-kbs/kb-add/kb-add.component.html
+++ b/apps/dashboard/src/app/account/account-kbs/kb-add/kb-add.component.html
@@ -59,6 +59,13 @@
                 {{ value.name.toLocaleLowerCase() }}
               </pa-radio>
             </pa-radio-group>
+            <div class="fields">
+              <pa-input
+                *ngFor="let field of this.getVisibleFields(conf)"
+                [formControlName]="field.value">
+                {{ field.name }}
+              </pa-input>
+            </div>
           </div>
         </div>
 
