--- a/apps/dashboard/src/app/account/account-kbs/kb-add/kb-add.component.html
+++ b/apps/dashboard/src/app/account/account-kbs/kb-add/kb-add.component.html
@@ -56,7 +56,12 @@
               <pa-radio
                 *ngFor="let value of conf.data.options"
                 [value]="value.value">
-                {{ value.name.toLocaleLowerCase() }}
+                {{
+                  (hasTranslation('stash.config.' + value.value)
+                    ? 'stash.config.' + value.value
+                    : value.name.toLowerCase()
+                  ) | translate
+                }}
               </pa-radio>
             </pa-radio-group>
           </div>
