--- a/libs/search-widget/src/common/paragraph-result/ParagraphResult.scss
+++ b/libs/search-widget/src/common/paragraph-result/ParagraphResult.scss
@@ -60,8 +60,8 @@
       padding-right: var(--rhythm-1_5);
     }
 
-    .paragraph-result-container:not(.selected):hover,
-    .paragraph-result-container:not(.selected).hover {
+    .paragraph-result-container:not(.selected):not(.disabled):hover,
+    .paragraph-result-container:not(.selected):not(.disabled).hover {
       background-color: var(--hover-background-color);
     }
 
