Fix selected paragraph style in dark mode

--- a/libs/search-widget/src/common/paragraph-result/ParagraphResult.scss
+++ b/libs/search-widget/src/common/paragraph-result/ParagraphResult.scss
@@ -35,6 +35,7 @@
     }
     &.selected {
       background: var(--selected-background-color);
+      color: var(--selected-text-color);
     }
     &:not(.disabled) {
       cursor: pointer;
