--- a/libs/search-widget/src/common/_global.scss
+++ b/libs/search-widget/src/common/_global.scss
@@ -158,6 +158,12 @@ ul.sw-dropdown-options {
   line-height: var(--line-height-body);
 }
 
+.body-s {
+  font-size: var(--font-size-small);
+  font-weight: var(--font-weight-body);
+  line-height: var(--line-height-body);
+}
+
 .body-xs {
   font-size: var(--font-size-xsmall);
   font-weight: var(--font-weight-body);
