--- a/libs/search-widget/src/common/_global.scss
+++ b/libs/search-widget/src/common/_global.scss
@@ -106,13 +106,16 @@ ul.sw-dropdown-options {
       margin-bottom: 0;
     }
   }
-  h1:first-child,
-  h2:first-child,
-  h3:first-child,
-  h4:first-child,
-  h5:first-child,
-  h6:first-child {
-    margin-top: 0;
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    line-height: 100%;
+    &:first-child {
+      margin-top: 0;
+    }
   }
 }
 
