--- a/libs/search-widget/src/components/viewer/renderers/ConversationRenderer.scss
+++ b/libs/search-widget/src/components/viewer/renderers/ConversationRenderer.scss
@@ -1,5 +1,5 @@
 .sw-conversation-renderer {
-  background-color: var(--color-light-stronger);
+  background-color: var(--container-background-color);
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
